--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Everyware</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">A platform that pervades your world</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -205,17 +205,13 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+	    Everyware is a mobile computing platform which aims to bring together the world around you.
+	    It is a mobile-based pervasive computing solution for a smarter world. Everyware aims to bring
+	    the user into a computing environment instead of computers entering the user's environment.
+	    Imagine a world where you do not have to 'ask' your computer to do things. It just 'knows' what
+	    you want.Imagine a world where information flows freely between devices seamlessly and contextually aware.
+	    Imagine your devices working together to make your life better. Imagine every device you own working towards
+	    helping you do things. Imagine your life 'everyware'.
           </p>
         </div>
       </div>
