--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 	    Imagine a world where you do not have to 'ask' your computer to do things. It just 'knows' what
 	    you want.Imagine a world where information flows freely between devices seamlessly and contextually aware.
 	    Imagine your devices working together to make your life better. Imagine every device you own working towards
-	    helping you do things. Imagine your life 'everyware'.
+	    helping you do things. Imagine <b>you</b> everywhere.
           </p>
         </div>
       </div>
